--- a/package.json
+++ b/package.json
@@ -34,5 +34,27 @@
   "bugs": {
     "url": "https://github.com/2remote/yaopai-m/issues"
   },
-  "homepage": "https://github.com/2remote/yaopai-m#readme"
+  "homepage": "https://github.com/2remote/yaopai-m#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.1",
+    "redux": "^3.3.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "clean-webpack-plugin": "^0.1.8",
+    "html-webpack-plugin": "^2.15.0",
+    "open-browser-webpack-plugin": "0.0.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.8.4"
+  }
 }
