--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,6 @@
 {
-  "parser": "babel-eslint",
-  "env": {
-    "browser": true,
-    "node": true
-  },
+  "extends": "airbnb",
   "plugins": [
     "react"
-  ],
-  "rules": {
-    "new-cap": 0,
-    "strict": 0,
-    "no-underscore-dangle": 0,
-    "no-use-before-define": 0,
-    "eol-last": 0,
-    "quotes": [0, "single"],
-    "indent": [2, 2],
-    "react/jsx-boolean-value": 0,
-    "jsx-quotes": 1,
-    "react/jsx-no-undef": 1,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1
-  }
+  ]
 }
