--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "webpack-dev-server & npm run server",
     "test": "karma start",
     "tdd": "karma start --auto-watch --no-single-run",
-    "lint": "eslint . --ext .js --ext .jsx",
+    "lint": "eslint app/ --ext .js, .jsx",
     "server": "node server.js",
     "deploy": "npm run build && npm run server"
   },
@@ -49,6 +49,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "clean-webpack-plugin": "^0.1.8",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.3.0",
     "html-webpack-plugin": "^2.15.0",
     "open-browser-webpack-plugin": "0.0.2",
     "webpack": "^1.12.14",
