--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   "dependencies": {
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.1",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
