--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "use for web app with CI for YAOPAI",
   "main": "index.js",
   "engines": {
-    "node": "0.12.7"
+    "node": "5.10.1"
   },
   "scripts": {
     "build": "webpack -p",
     "start": "webpack-dev-server & npm run server",
     "lint": "eslint app/ --ext .js, .jsx",
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch",
     "server": "node server.js",
     "deploy": "npm run build && npm run server"
   },
@@ -48,12 +50,14 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
     "clean-webpack-plugin": "^0.1.8",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
     "html-webpack-plugin": "^2.15.0",
+    "mocha": "^2.4.5",
     "open-browser-webpack-plugin": "0.0.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
