--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^2.2.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
