--- a/package.json
+++ b/package.json
@@ -53,13 +53,17 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "clean-webpack-plugin": "^0.1.8",
+    "css-loader": "^0.23.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
     "html-webpack-plugin": "^2.15.0",
     "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
     "open-browser-webpack-plugin": "0.0.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.8.4"
