--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "node": "5.10.1"
   },
   "scripts": {
-    "build": "webpack -p",
-    "start": "webpack-dev-server & npm run server",
-    "lint": "eslint app/ --ext .js, .jsx",
+    "start": "echo 'Please use \"npm run dev:user\" or \"npm run dev:grapher\"'",
+    "dev:user": "webpack-dev-server & npm run server",
+    "dev:grapher": "webpack-dev-server & npm run server",
+    "build": "echo 'Please use \"npm run build:user\" or \"npm run build:grapher\"'",
+    "build:user": "webpack -p",
+    "build:grapher": "webpack -p",
+    "deploy": "echo 'Please use \"npm run deploy:user\" or \"npm run deploy:grapher\"'",
+    "deploy:user": "npm run build:user && npm run server",
+    "deploy:graph": "npm run build:grapher && npm run server",
     "test": "mocha --compilers js:babel-register --recursive",
     "test:watch": "npm test -- --watch",
-    "server": "node server.js",
-    "deploy": "npm run build && npm run server"
+    "lint": "eslint app/ --ext .js, .jsx",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
