--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/2remote/yaopai-m#readme",
   "dependencies": {
+    "blueimp-md5": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "isomorphic-fetch": "^2.2.1",
