--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "blueimp-md5": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.3",
     "react": "^0.14.8",
@@ -51,6 +52,7 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.1",
     "redux": "^3.3.1",
+    "redux-immutable": "^3.0.6",
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
