--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "blueimp-md5": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "fastclick": "^1.0.6",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.3",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-fastclick": "^2.1.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.1",
+    "react-router-transition": "0.0.5",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
   },
